--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 *.so
 .Python
 env/
@@ -26,11 +25,12 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media/
+staticfiles/
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.*
 
 # IDE
 .idea/
@@ -40,14 +40,4 @@ media/
 
 # OS
 .DS_Store
-Thumbs.db 
-
-__pycache__/
-*.pyc
-*.pyo
-db.sqlite3
-/media/
-/staticfiles/
-/venv/
-*.log
-*.env
+Thumbs.db
